# helix_mp3

./: CMakeLists.txt  release_notes.md
fixpnt/: CMakeLists.txt  mp3dec.c  mp3tabs.c
fixpnt/pub/: mp3common.h  mp3dec.h  mpadecobjfixpt.h
fixpnt/real/: assembly.h  bitstream.c  buffers.c  coder.h  dct32.c  dqchan.c  huffman.c  hufftabs.c  imdct.c  polyphase.c  scalfact.c  stproc.c  subband.c  trigtabs.c
